--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
-    "mongoose": "^8.16.5"
+    "mongoose": "^8.16.5",
+    "multer": "^2.0.2"
   }
 }
